<resources>
    <string name="app_name">parcial-1-am-acn4av-toro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mandoca">Mandoca</string>
    <string name="agregar">Agregar</string>
    <string name="total">Total: $</string>
    <string name="Alquiler">Alquiler: $</string>
    <string name="textView_alquiler">Alquiler: $</string>
    <string name="textView_expensas">Expensas: $</string>
    <string name="valor_alquiler">valor alquiler</string>
    <string name="valor_expensas">valor expensas</string>
    <string name="valor_servicios">valor servicios</string>
    <string name="valor_supermercado">valor mercado</string>
    <string name="textView_supermercado">Mercado</string>
    <string name="textView_servicios">Servicios</string>
    <string name="servicios">Servicios: $</string>
    <string name="supermercado">Mercado: $</string>
    <string name="textView_hogar">Otros: $</string>
    <string name="valor_otros">valor otros gastos</string>
    <string name="textView_mandoca">mandoca</string>

    <string name="menu_gastos">Gastos</string>
    <string name="menu_ingresos">Ingresos</string>
    <string name="menu_balance">Balance</string>
    <string name="menu_presupuesto">Presupuesto</string>
    <string name="presupuesto">Presupuesto</string>
    <string name="balance">Balance</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos">Gastos</string>
    <string name="gestiona_tus_gastos_aca">Gestioná tus gastos acá: </string>
    <string name="cancelar">Cancelar</string>
    <string name="octubre">Octubre 2024</string>
    <string name="flecha_izquierda"><![CDATA[<]]></string>
    <string name="flecha_derecha"><![CDATA[>]]></string>
    <string name="checklist">Checklist</string>
    <string name="inicio">Inicio</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="login_TextView">Login</string>
    <string name="login_username">login_username</string>
    <string name="login_password">login_password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nombre_y_apellido_signup">Nombre y Apellido</string>
    <string name="email_signup">Email</string>
    <string name="usuario_signup">Usuario</string>
    <string name="password_signup">Contraseña</string>
    <string name="registrate_signup">Regístrate</string>
    <string name="usuario_registrado_signup">¿Ya tienes un usuario? Inicia sesión aquí</string>
    <string name="usuario_login">Usuario</string>
    <string name="password_login">Contraseña</string>
    <string name="iniciarSesion_login">Iniciar sesión</string>
    <string name="sinRegistro_login">¿No te has registrado? Regístrate aquí</string>
    <string name="email_login">Email</string>
    <string name="description_scrollView">Contenedor desplazable.</string>
    <string name="textView_mandoca_login_signup">mandoca</string>
    <string name="textView_finance_app">Finance app</string>
    <string name="logout_btn_profile">Log out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="textView_password_profile">Password</string>
    <string name="textView2_password_profile">password</string>
    <string name="textView_email_profile">Email</string>
    <string name="textView2_email_profile">email</string>
    <string name="textView_nombre_profile">Nombre</string>
    <string name="textView2_nombre_profile">nombre</string>
    <string name="title_nombre_profile">Nombre</string>
    <string name="descargar_datos_profile">Descargar datos</string>
</resources>